new task search&change_selector

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <form>
         <input type="text" id="text">
         <input type="submit" value="Добавить" id="add">
+        <a href="new-task.html">newTask</a>
     </form>
     <div class="view-task">
         <div class="list"></div>
